--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
     "@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
     "axios": "^0.25.0",
+    "highcharts-vue": "^1.4.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
